branch commit homework 2.7